<resources>
    <string name="login">Log in</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="dontHaveUser">Don\'t have a user?</string>
    <string name="signup">Sign up</string>
    <string name="loginOrSignupWith">Log in or Sign up with</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="already_registered">Already registered?</string>
    <string name="good_day">Good day!</string>
    <string name="what_do_you_want_to_do">What do you want to do today?</string>
    <string name="social">Social</string>
    <string name="building_and_construction">Building and Construction</string>
    <string name="nature_and_green">Nature and Green</string>
    <string name="activities_and_training">Activities and Training</string>
    <string name="technology">Technology</string>
    <string name="organisation">Organisation</string>
    <string name="another">Other</string>

    <string name="select_categories">Select Categories</string>
    <string name="next">Next</string>
    <string name="give_a_description">Give a description</string>
    <string name="description_hint">Feel free to enter a description of the idea. Maximum 300 characters</string>
    <string name="max_500_characters">Max 500 characters</string>
    <string name="record_instead">Record instead</string>
    <string name="select_an_image">Select an image</string>
    <string name="enter_details">Enter Details</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="summary">Summary</string>
    <string name="description">Description</string>
    <string name="images">Images</string>
    <string name="submit">Submit</string>
    <string name="thank_you">Thank you!</string>
    <string name="your_help">Your idea helps to  make a difference</string>
    <string name="your_have_received">Your have received</string>
    <string name="two_points">+2 points!</string>
    <string name="finish">Finish</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="total_score_count">Total Min By points</string>
    <string name="fullname">Full name</string>
    <string name="user_address">User Address</string>
    <string name="save">Save</string>
    <string name="version">Version</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Log Out</string>
    <string name="push_notification">Push Notification</string>
    <string name="version_number">1.0.0</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="map">Map</string>


    <string name="app_name">MinBy</string>
    <string name="categories">Categories</string>
    <string name="copied">copied</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="existing_use">Existing use?</string>
    <string name="facebook_app_id">570257243697104</string>
    <string name="fb_login_protocol_scheme">fb570257243697104</string>
    <string name="dont_have_use">Don\'t have a user?</string>
    <string name="message">message</string>
    <string name="message_hint">Hi, speak something...</string>
    <string name="minby">MinBy</string>
    <string name="Password_not_matched"> Password not matched</string>
    <string name="register">Register</string>
    <string name="server_client_id">"359724204371-goaj8d2qbicd9ki23hiqo1vg1ktglukr.apps.googleusercontent.com"</string>
    <string name="we_build_city_together">We build the city together</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="library">Library</string>
    <string name="complete">Complete</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed">Feed</string>
    <string name="facebook">Facebook</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="google">Google</string>

</resources>
