<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/issueFragment"
        android:icon="@drawable/ic_mail"
        android:title="@string/message" />
    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/ic_location"
        android:title="@string/categories" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>