<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:padding="20dp"
    tools:context=".profile.ProfileFragment">

    <TextView
        android:id="@+id/toolbarTitle"
        style="@style/TitleBold18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/change_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:src="@drawable/ic_back_arrow"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/currentPassword"
        style="@style/EditTextStyle"
        android:layout_marginTop="37dp"
        android:hint="@string/current_password"
        android:imeOptions="actionNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarTitle"
        tools:text="@string/current_password" />

    <EditText
        android:id="@+id/newPassword"
        style="@style/EditTextStyle"
        android:layout_marginTop="15dp"
        android:hint="@string/new_password"
        android:imeOptions="actionNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentPassword"
        tools:text="@string/new_password" />

    <EditText
        android:id="@+id/confirmPassword"
        style="@style/EditTextStyle"
        android:layout_marginTop="15dp"
        android:imeOptions="actionDone"
        android:hint="@string/confirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPassword"
        tools:text="@string/confirmPassword" />

    <Button
        android:id="@+id/save"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>