<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/enter_details"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:src="@drawable/ic_back_arrow"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descHeader"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/give_a_description"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:elevation="4dp"
        android:gravity="top"
        android:hint="Feel free to enter a description of the idea. Maximum 300 characters"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="30dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/descHeader"
        tools:text="Feel free to enter a Feel free to enter a description of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 characters of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 characters" />

    <TextView
        android:id="@+id/selectImageHeader"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_an_image"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/camera"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_home_item"
        android:drawableStart="@drawable/camera_image"
        android:elevation="10dp"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/camera"
        android:textColor="#707373"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@+id/gallery"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectImageHeader" />

    <TextView
        android:id="@+id/gallery"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_home_item"
        android:drawableStart="@drawable/library_books_black_24dp"
        android:elevation="10dp"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/gallery"
        android:textColor="#707373"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/camera"
        app:layout_constraintTop_toBottomOf="@id/selectImageHeader" />

    <View
        android:id="@+id/dividerView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="#EDEDED"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/description"
        app:layout_constraintEnd_toEndOf="@id/description"
        app:layout_constraintStart_toStartOf="@id/description" />

    <ImageView
        android:id="@+id/voiceIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        android:elevation="4dp"
        android:src="@drawable/voice_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/description"
        app:layout_constraintRight_toRightOf="@id/description"
        app:layout_constraintTop_toBottomOf="@id/dividerView" />

    <TextView
        android:id="@+id/maxLimit"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:elevation="4dp"
        android:text="@string/max_500_characters"
        android:textColor="#A3A3A3"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/description"
        app:layout_constraintTop_toBottomOf="@+id/dividerView" />

    <TextView
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="4dp"
        android:text="@string/record_instead"
        android:textColor="#A3A3A3"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@id/voiceIcon"
        app:layout_constraintTop_toBottomOf="@+id/dividerView" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/login_button_background"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>