<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/summary"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:src="@drawable/ic_back_arrow"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/library_books_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon" />

    <TextView
        android:id="@+id/userEmail"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:textColor="#3F4040"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintLeft_toRightOf="@+id/userImage"
        app:layout_constraintTop_toBottomOf="@id/backIcon"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="safalkumarghimire@gmail.com" />

    <TextView
        android:id="@+id/location"
        style="@style/Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:drawableStart="@drawable/ic_marker_small"
        android:drawablePadding="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="#707373"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/userImage"
        app:layout_constraintStart_toEndOf="@id/userImage"
        app:layout_constraintTop_toBottomOf="@+id/userEmail"
        tools:text="Rolf E. Stenersens alle 38B" />

    <TextView
        android:id="@+id/category"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_category_summary"
        android:drawableStart="@drawable/ic_nature_small"
        android:drawablePadding="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/userImage"
        app:layout_constraintStart_toEndOf="@id/userImage"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:text="@string/nature_and_green" />

    <TextView
        android:id="@+id/descHeader"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImage" />

    <TextView
        android:id="@+id/description"
        style="@style/DescEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:elevation="4dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/descHeader"
        tools:text="Feel free to enter a Feel free to enter a description of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 characters of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 charactersFeel free to enter a description of the idea. Maximum 300 characters" />

    <TextView
        android:id="@+id/images"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/images"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <ImageView
        android:id="@+id/image1"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/library_books_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/images" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/library_books_black_24dp"
        app:layout_constraintStart_toEndOf="@id/image1"
        app:layout_constraintTop_toBottomOf="@id/images" />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/library_books_black_24dp"
        app:layout_constraintStart_toEndOf="@id/image2"
        app:layout_constraintTop_toBottomOf="@id/images" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/standard_button_background"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>